Bug 106459 - fc-cache doesn't use -y option for .uuid files
Summary: fc-cache doesn't use -y option for .uuid files
Status: RESOLVED FIXED
Alias: None
Product: fontconfig
Classification: Unclassified
Component: fc-cache (show other bugs)
Version: unspecified
Hardware: Other All
: medium normal
Assignee: Akira TAGOH
QA Contact: Behdad Esfahbod
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2018-05-10 10:48 UTC by Laurent Bigonville
Modified: 2018-05-13 07:23 UTC (History)
2 users (show)

See Also:
i915 platform:
i915 features:


Attachments
fc-cache log (3.87 KB, text/plain)
2018-05-10 11:12 UTC, Laurent Bigonville
Details

Description Laurent Bigonville 2018-05-10 10:48:45 UTC
Hello,

I'm trying to create a cache for fonts located in a chroot

when running fc-cache -y $PATH_TO_CHROOT the fonts are properly detected and caches files are also present in the chroot.

But it seems that fc-cache looks for .uuid files out side of the chroot and no .uuid files are created inside it.

Is that expected?
Comment 1 Laurent Bigonville 2018-05-10 11:12:18 UTC
Created attachment 139463 [details]
fc-cache log

fc-cache is called with:

fc-cache -r -s -v -y "${DESTDIR}"
Comment 2 Akira TAGOH 2018-05-10 11:17:57 UTC
That should be a bug. will take a look. thanks for reporting.
Comment 3 Akira TAGOH 2018-05-13 07:23:55 UTC
fixed in git 0b85e77


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.