Bug 106459 - fc-cache doesn't use -y option for .uuid files

https://bugs.freedesktop.org/show_bug.cgi?id=106459